# rust-networking

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md
benches/: dns_bench.rs  grpc_bench.rs  http_bench.rs  https_bench.rs  layers_bench.rs  quic_bench.rs  smtp_bench.rs  tcp_bench.rs  tls_bench.rs  udp_bench.rs  websocket_bench.rs
diagrams/: 01-layers-ip-routing.mmd  02-tcp.mmd  03-udp.mmd  04-dns.mmd  05-tls.mmd  06-http.mmd  07-https.mmd  08-smtp.mmd  09-websocket.mmd  10-grpc.mmd  11-quic.mmd
docs/: 01-layers-ip-routing.md  02-tcp.md  03-udp.md  04-dns.md  05-tls.md  06-http.md  07-https.md  08-smtp.md  09-websocket.md  10-grpc.md  11-quic.md  SUMMARY.md
docs/superpowers/plans/: 2026-07-16-rust-networking-course.md
examples/: dns_advanced.rs  dns_basic.rs  dns_intermediate.rs  dns_real_case.rs  grpc_advanced.rs  grpc_basic.rs  grpc_intermediate.rs  grpc_real_case.rs  http_advanced.rs  http_basic.rs  http_intermediate.rs  http_real_case.rs  https_advanced.rs  https_basic.rs  https_intermediate.rs  https_real_case.rs  layers_advanced.rs  layers_basic.rs  layers_intermediate.rs  layers_real_case.rs  quic_advanced.rs  quic_basic.rs  quic_intermediate.rs  quic_real_case.rs  smtp_advanced.rs  smtp_basic.rs  smtp_intermediate.rs  smtp_real_case.rs  tcp_advanced.rs  tcp_basic.rs  tcp_intermediate.rs  tcp_real_case.rs  tls_advanced.rs  tls_basic.rs  tls_intermediate.rs  tls_real_case.rs  udp_advanced.rs  udp_basic.rs  udp_intermediate.rs  udp_real_case.rs  (+4 more)
examples/soluciones/: dns_a_record.rs  dns_cname_resolution.rs  dns_ttl_cache.rs  grpc_method_contract.rs  grpc_status_mapping.rs  grpc_streaming_model.rs  http_cache_headers.rs  http_parse_request.rs  http_status_response.rs  https_certificate_failure.rs  https_hsts_policy.rs  https_secure_request.rs  layers_classify_packet.rs  layers_route_selection.rs  layers_subnet_match.rs  quic_connection_migration.rs  quic_handshake.rs  quic_streams.rs  smtp_conversation.rs  smtp_envelope_headers.rs  smtp_mx_selection.rs  tcp_handshake.rs  tcp_ordered_stream.rs  tcp_retransmission.rs  tls_certificate_chain.rs  tls_cipher_negotiation.rs  tls_identity_check.rs  udp_datagram.rs  udp_loss_model.rs  udp_size_limit.rs  websocket_frames.rs  websocket_ping_pong.rs  websocket_upgrade.rs
src/: dns.rs  grpc.rs  http.rs  https.rs  layers.rs  lib.rs  quic.rs  smtp.rs  tcp.rs  tls.rs  udp.rs  websocket.rs
tests/: dns_test.rs  grpc_test.rs  http_test.rs  https_test.rs  layers_test.rs  quic_test.rs  smtp_test.rs  tcp_test.rs  tls_test.rs  udp_test.rs  websocket_test.rs
