[package]
name = "rust-networking"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-networking"
description = "Redes en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_networking"
path = "src/lib.rs"

[dependencies]

[[example]]
name = "solution_layers_classify_packet"
path = "examples/soluciones/layers_classify_packet.rs"

[[example]]
name = "solution_layers_subnet_match"
path = "examples/soluciones/layers_subnet_match.rs"

[[example]]
name = "solution_layers_route_selection"
path = "examples/soluciones/layers_route_selection.rs"

[[example]]
name = "solution_tcp_handshake"
path = "examples/soluciones/tcp_handshake.rs"

[[example]]
name = "solution_tcp_ordered_stream"
path = "examples/soluciones/tcp_ordered_stream.rs"

[[example]]
name = "solution_tcp_retransmission"
path = "examples/soluciones/tcp_retransmission.rs"

[[example]]
name = "solution_udp_datagram"
path = "examples/soluciones/udp_datagram.rs"

[[example]]
name = "solution_udp_loss_model"
path = "examples/soluciones/udp_loss_model.rs"

[[example]]
name = "solution_udp_size_limit"
path = "examples/soluciones/udp_size_limit.rs"

[[example]]
name = "solution_dns_a_record"
path = "examples/soluciones/dns_a_record.rs"

[[example]]
name = "solution_dns_cname_resolution"
path = "examples/soluciones/dns_cname_resolution.rs"

[[example]]
name = "solution_dns_ttl_cache"
path = "examples/soluciones/dns_ttl_cache.rs"

[[example]]
name = "solution_tls_identity_check"
path = "examples/soluciones/tls_identity_check.rs"

[[example]]
name = "solution_tls_cipher_negotiation"
path = "examples/soluciones/tls_cipher_negotiation.rs"

[[example]]
name = "solution_tls_certificate_chain"
path = "examples/soluciones/tls_certificate_chain.rs"

[[example]]
name = "solution_http_parse_request"
path = "examples/soluciones/http_parse_request.rs"

[[example]]
name = "solution_http_status_response"
path = "examples/soluciones/http_status_response.rs"

[[example]]
name = "solution_http_cache_headers"
path = "examples/soluciones/http_cache_headers.rs"

[[example]]
name = "solution_https_secure_request"
path = "examples/soluciones/https_secure_request.rs"

[[example]]
name = "solution_https_certificate_failure"
path = "examples/soluciones/https_certificate_failure.rs"

[[example]]
name = "solution_https_hsts_policy"
path = "examples/soluciones/https_hsts_policy.rs"

[[bench]]
name = "layers_bench"
harness = false

[[bench]]
name = "tcp_bench"
harness = false

[[bench]]
name = "udp_bench"
harness = false

[[bench]]
name = "dns_bench"
harness = false

[[bench]]
name = "tls_bench"
harness = false

[[bench]]
name = "http_bench"
harness = false

[[bench]]
name = "https_bench"
harness = false
